--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,9 +31,9 @@ jobs:
           docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/hmcts/mssql-backup-converter:pr-${{github.event.number}}-${{ steps.prep.outputs.BUILD_ID }}
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/hmcts/mssql-backup-converter:pr-${{github.event.number}}-${{ steps.prep.outputs.BUILD_ID }}
         if: startsWith(github.ref, 'refs/pull')
-        name: 'Build and publish image'
+        name: 'Build and publish PR image'
       - run: |
           docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/hmcts/mssql-backup-converter:prod-${{ steps.prep.outputs.BUILD_ID }}
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/hmcts/mssql-backup-converter:prod-${{ steps.prep.outputs.BUILD_ID }}
         if: github.ref == 'refs/heads/main'
-        name: 'Build and publish image'
+        name: 'Build and publish production image'
